test/libhyperion/syntaxTests/nameAndTypeResolution/407_invalid_address_no_checksum.hyp
contract C {
    function f() pure public {
        address x = Q0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000fa0bfc97e48458494ccd857e1a85dc91f7f0046e;
        x;
    }
}
// ----
// SyntaxError 9429: (64-193): This looks like an address but is not a valid QRL address literal. Canonical address: "Q0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000fA0BfC97e48458494CCD857E1a85dc91f7f0046e".
